# Python-GS

./: Analise_dados.csv  Numeros1.csv  README.md  analise.ipynb  app.py  dados.ipynb  modelo_treinado.pkl  pyproject.toml  script.ipynb
