[tool.poetry]
name = "python GS"
version = "0.1.0"
description = ""
authors = ["JoaoVitorCarottaRibeiro <joaovitcr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.18"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
